# Unlimited_possibilies_framework

./: .gitignore  1.pub  Cargo.toml  README.md  character.json  world.json  world1.json
data/: locations.json
src/: main.rs
src/engine/: apply_event.rs  apply_narrative.rs  engine.rs  llm_client.rs  mod.rs  narrative_parser.rs  prompt_builder.rs  protocol.rs
src/model/: app.rs  event_result.rs  game_context.rs  game_save.rs  game_state.rs  game_state_internal.rs  internal_game_state.rs  llm_decode.rs  message.rs  mod.rs  narrative.rs  narrative_event.rs
src/ui/: app.rs  center_panel.rs  left_panel.rs  mod.rs  right_panel.rs  settings.rs  settings_io.rs
