[package]
name = "Unlimited_possibilities_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.25"
egui = "0.28"
rfd = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0"
