[package]
name = "Unlimited_possibilities_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.33"
eframe = "0.33"
rfd = "0.17.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
anyhow = "1.0"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
png = "0.17.16"
rand = "0.8"
